[js] 터치 패드 컨트롤러 完

--- a/index.html
+++ b/index.html
@@ -113,6 +113,39 @@
             </div>
         </div>
         <div class="layer wordForWord" id="textLayer"></div>
+        <div id="right_pad">
+            <div class="pad_row" id="rot_pad">
+                <div class="pad_button" id="pad_rotateLeft">
+                    <div class="innerPad" id="innerPad_RL">⭯</div>
+                </div>
+                <div class="pad_button" id="pad_rotateRight">
+                    <div class="innerPad" id="innerPad_RR">⭮</div>
+                </div>
+            </div>
+            <div class="pad_row" id="dir_pad">
+                <div class="pad_button" id="pad_moveLeft">
+                    <div class="innerPad" id="innerPad_ML">⮜ </div>
+                </div>
+                <div class="pad_button" id="pad_moveRight">
+                    <div class="innerPad" id="innerPad_MR"> ⮞</div>
+                </div>
+            </div>
+            <div class="pad_row" id="sd_pad">
+                <div class="pad_button" id="pad_softDrop">
+                    <div class="innerPad" id="innerPad_SD">⮟</div>
+                </div>
+            </div>
+        </div>
+        <div id="left_pad">
+            <div class="pad_row" id="hd_pad">
+                <div class="pad_button" id="pad_hardDrop">
+                    <div class="innerPad" id="innerPad_HD"><div>⮟</div><div>▁</div></div>
+                </div>
+                <div class="pad_button" id="pad_hold">
+                    <div class="innerPad" id="innerPad_HLD"><div id="arrow_HLD">  ↶</div><div id="box_HLD">⍽</div></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="modal" id="pauseModal">
         <div class="modal_window of_pause">
