[css] 특수 문자 폰트 수정

--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
                     <div class="innerPad" id="innerPad_HD"><div>⮟</div><div>▁</div></div>
                 </div>
                 <div class="pad_button" id="pad_hold">
-                    <div class="innerPad" id="innerPad_HLD"><div id="arrow_HLD">  ↶</div><div id="box_HLD">⍽</div></div>
+                    <div class="innerPad" id="innerPad_HLD">
+                        <div id="combo_HLD">
+                            <div id="box_HLD">▢</div>
+                            <div id="arrow_HLD">⬆</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -295,10 +300,10 @@
                                 <div class="single_key big_letter" id="z_key">Z</div>
                                 <div class="single_key big_letter" id="c_key">C</div>
                                 <div class="single_key big_letter" id="p_key">P</div>
-                                <div class="single_key big_letter" id="right_key">🡆</div>
-                                <div class="single_key big_letter" id="left_key">🡄</div>
-                                <div class="single_key big_letter" id="up_key">🡅</div>
-                                <div class="single_key big_letter" id="down_key">🡇</div>
+                                <div class="single_key big_letter arrow_key" id="right_key">🡆</div>
+                                <div class="single_key big_letter arrow_key" id="left_key">🡄</div>
+                                <div class="single_key big_letter arrow_key" id="up_key">🡅</div>
+                                <div class="single_key big_letter arrow_key" id="down_key">🡇</div>
                                 <div class="single_key small_letter" id="spacebar">SPACE</div>
 
                                 <div class="key_indicator" id="esc_indicator">
